--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <p class="fs-3 pt-2">Don't wait to hit the gym. Our exclusive e-magazine is filled with useful
            workouts and tips to stay active right at home - giving you everything you need to reach your 
            goals in no time at all!</p>
-        <a href="featured.html" class="btn btn-dark m-2" alt="Button" title="Click this Button">Begin your Journey</a>
+        <a href="featured.html" class="btn btn-dark m-2" alt="Button" title="This is a button to your Journey">Begin your Journey</a>
       </div>
 
       <!-- RIGHT CONTENT AREA FOR THUMBNAILS  -->
